--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,27 +1,28 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to t("sample_app"), root_path, id: "logo" %>
+    <%= link_to t("label.logo"), root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to t("home"), root_path %></li>
-        <li><%= link_to t("help"), help_path %></li>
+        <li><%= link_to t("label.homepage"), root_path %></li>
+        <li><%= link_to t("label.helppage"), help_path %></li>
         <% if logged_in? %>
-          <li><%= link_to t("users"), "#" %></li>
+          <li><%= link_to t("label.user"), users_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <%= t("account") %> <b class="caret"></b>
+            <%= t("label.account") %>
+            <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to t("profile"), current_user %></li>
-              <li><%= link_to t("settings"), "#" %></li>
+              <li><%= link_to t("label.profile"), current_user %></li>
+              <li><%= link_to t("label.settings"), edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
-                <%= link_to t("log_out"), logout_path, method: :delete %>
+                <%= link_to t("label.logout"), logout_path, method: :delete %>
               </li>
             </ul>
           </li>
         <% else %>
-          <li><%= link_to t("log_in"), login_path %></li>
+          <li><%= link_to t("label.login"), login_path %></li>
         <% end %>
       </ul>
     </nav>
