--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,15 +6,21 @@
         <li><%= link_to t("label.homepage"), root_path %></li>
         <li><%= link_to t("label.helppage"), help_path %></li>
         <% if logged_in? %>
-          <li><%= link_to t("label.user"), users_path %></li>
+
+          <li><%= link_to t("users"), '#' %></li>
+
+
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <%= t("label.account") %>
             <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to t("label.profile"), current_user %></li>
-              <li><%= link_to t("label.settings"), edit_user_path(current_user) %></li>
+
+             <li><%= link_to t("profile"), current_user %></li>
+
+              <li><%= link_to t("settings"), '#' %></li>
+
               <li class="divider"></li>
               <li>
                 <%= link_to t("label.logout"), logout_path, method: :delete %>
